--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,13 +20,30 @@
       "error",
       { "allow": ["updated_at", "created_at", "provider_id", "user_id"] }
     ],
+    "@typescript-eslint/naming-convention": [
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
+    ],
+    "no-useless-constructor": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
         "argsIgnorePattern": "_"
       }
     ],
-    "prettier/prettier": "error",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
     "class-methods-use-this": "off",
     "import/extensions": [
       "error",
